--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     
+    <table id ="listaZadan">
+        <tr>
+            <th>lp.</th>
+            <th>czynnosc</th>
+            <th>data</th>
+            <th>godzina</th>
+            <th>miejsce</th>
+            <th>priorytet</th>
+        </tr>
+    </table>
+    <p>tablica rozwijana z wypisanymi elementami z bazy danych</p>
+
+    <div id="formularz">
+
+    </div>
+    <div id="zegar">
+
+    </div>
+    <div id="kalendarz">
+
+    </div>
 </body>
 </html>
