--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
             <th>data</th>
             <th>godzina</th>
             <th>miejscowosc</th>
-            <th>adres</th>
+            <th>Jana Kilinskiego</th>
             <th>priorytet</th>
+        </tr>
+        <tr>
+            <th>1</th>
+            <th>lekarz</th>
+            <th>03-06-2024</th>
+            <th>13:00</th>
+            <th>Zamosc</th>
+            <th>adres</th>
+            <th>wysoki</th>
         </tr>
     </table>
     <p>tablica rozwijana z wypisanymi elementami z bazy danych</p>
